Fix GCC build issue with WTF Vector change

Follow up from https://chromium.googlesource.com/chromium/src.git/+/7e41fa373b7e2af5c88878d1430f5a4cd3f0b385 [formerly 9d0fd86cf833cd7f35eea342f15c827516938d67]

Adjust mojo template. It built correctly with clang but failed to build
with GCC.

BUG=652586, 819294
TBR=jam@chromium.org

Change-Id: I985bf855d5fce1f2c774123a8f6103e97aedb9f6
Reviewed-on: https://chromium-review.googlesource.com/1154990
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Raphael Kubo da Costa (CET) <raphael.kubo.da.costa@intel.com>
Cr-Commit-Position: refs/heads/master@{#579040}
Former-commit-id: ab027ae0b4f60b704322f4cb291270412eca1390